--- a/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
+++ b/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
@@ -20,7 +20,10 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-sort-header="name" *matHeaderCellDef mat-header-cell>
-        {{ "APPLICATION-TABLE.NAME" | translate }}
+        <div [ngClass]="this.sort.active === 'name' ? 'column-title-color' : 'column-title-color-inactive'">
+          {{ "APPLICATION-TABLE.NAME" | translate }}
+        </div>
+        <app-table-sort-icon [sortDirection]="getSortDirection('name')" />
       </th>
       <td mat-cell *matCellDef="let iotDevice">
         <a [routerLink]="['../iot-device', iotDevice.id]" routerLinkActive="active" class="device-link">{{
@@ -31,41 +34,80 @@
 
     <!-- Technology Column -->
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "IOT-TABLE.NETWORK-TECHNOLOGY" | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <div [ngClass]="this.sort.active === 'type' ? 'column-title-color' : 'column-title-color-inactive'">
+          {{ "IOT-TABLE.NETWORK-TECHNOLOGY" | translate }}
+        </div>
+        <app-table-sort-icon [sortDirection]="getSortDirection('type')" />
+      </th>
       <td mat-cell *matCellDef="let iotDevice">{{ "IOT-DEVICE-TYPES." + iotDevice.type | translate }}</td>
     </ng-container>
 
     <ng-container matColumnDef="commentOnLocation">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "GATEWAY.PLACEMENT-LABEL" | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <div
+          [ngClass]="this.sort.active === 'commentOnLocation' ? 'column-title-color' : 'column-title-color-inactive'"
+        >
+          {{ "GATEWAY.PLACEMENT-LABEL" | translate }}
+        </div>
+        <app-table-sort-icon [sortDirection]="getSortDirection('commentOnLocation')" />
+      </th>
       <td mat-cell *matCellDef="let iotDevice">
         {{ iotDevice.commentOnLocation ? truncateText(iotDevice.commentOnLocation) : "-" }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="deviceModel">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "IOTDEVICE.DEVICEMODEL" | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <div [ngClass]="this.sort.active === 'deviceModel' ? 'column-title-color' : 'column-title-color-inactive'">
+          {{ "IOTDEVICE.DEVICEMODEL" | translate }}
+        </div>
+        <app-table-sort-icon [sortDirection]="getSortDirection('deviceModel')" />
+      </th>
       <td mat-cell *matCellDef="let iotDevice">{{ iotDevice.deviceModel?.body?.name ?? "-" }}</td>
     </ng-container>
 
     <ng-container matColumnDef="deviceProfileName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "IOTDEVICE.LORA.DEVICEPROFILE" | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <div
+          [ngClass]="this.sort.active === 'deviceProfileName' ? 'column-title-color' : 'column-title-color-inactive'"
+        >
+          {{ "IOTDEVICE.LORA.DEVICEPROFILE" | translate }}
+        </div>
+        <app-table-sort-icon [sortDirection]="getSortDirection('deviceProfileName')" />
+      </th>
       <td mat-cell *matCellDef="let iotDevice">{{ iotDevice.deviceProfileName ?? "-" }}</td>
     </ng-container>
 
     <ng-container matColumnDef="deviceEUI">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "IOT-TABLE.DEV-EUI" | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <div [ngClass]="this.sort.active === 'deviceEUI' ? 'column-title-color' : 'column-title-color-inactive'">
+          {{ "IOT-TABLE.DEV-EUI" | translate }}
+        </div>
+        <app-table-sort-icon [sortDirection]="getSortDirection('deviceEUI')" />
+      </th>
       <td mat-cell *matCellDef="let iotDevice">{{ iotDevice.deviceEUI ?? "-" }}</td>
     </ng-container>
 
     <ng-container matColumnDef="OTAAapplicationKey">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "IOT-TABLE.APP-KEY" | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <div
+          [ngClass]="this.sort.active === 'OTAAapplicationKey' ? 'column-title-color' : 'column-title-color-inactive'"
+        >
+          {{ "IOT-TABLE.APP-KEY" | translate }}
+        </div>
+        <app-table-sort-icon [sortDirection]="getSortDirection('OTAAapplicationKey')" />
+      </th>
       <td mat-cell *matCellDef="let iotDevice">{{ iotDevice.OTAAapplicationKey ?? "-" }}</td>
     </ng-container>
 
     <!-- RSSI column -->
     <ng-container matColumnDef="rssi">
       <th *matHeaderCellDef mat-header-cell mat-sort-header="rssi">
-        {{ "IOT-TABLE.RSSI" | translate }}
+        <div [ngClass]="this.sort.active === 'rssi' ? 'column-title-color' : 'column-title-color-inactive'">
+          {{ "IOT-TABLE.RSSI" | translate }}
+        </div>
+        <app-table-sort-icon [sortDirection]="getSortDirection('rssi')" />
       </th>
       <td mat-cell *matCellDef="let iotDevice">
         <ng-container *ngIf="iotDevice.type === 'LORAWAN' || iotDevice.type === 'SIGFOX'; else notSupported">
@@ -79,7 +121,10 @@
     <!-- SNR column -->
     <ng-container matColumnDef="snr">
       <th *matHeaderCellDef mat-header-cell mat-sort-header="snr">
-        {{ "IOT-TABLE.SNR" | translate }}
+        <div [ngClass]="this.sort.active === 'snr' ? 'column-title-color' : 'column-title-color-inactive'">
+          {{ "IOT-TABLE.SNR" | translate }}
+        </div>
+        <app-table-sort-icon [sortDirection]="getSortDirection('snr')" />
       </th>
       <td mat-cell *matCellDef="let iotDevice">
         <ng-container *ngIf="iotDevice.type === 'LORAWAN' || iotDevice.type === 'SIGFOX'; else notSupported">
@@ -92,7 +137,10 @@
 
     <ng-container matColumnDef="dataTargets">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ "APPLICATION-TABLE.DATA-TARGETS" | translate }}
+        <div [ngClass]="this.sort.active === 'dataTargets' ? 'column-title-color' : 'column-title-color-inactive'">
+          {{ "APPLICATION-TABLE.DATA-TARGETS" | translate }}
+        </div>
+        <app-table-sort-icon [sortDirection]="getSortDirection('dataTargets')" />
       </th>
       <td mat-cell *matCellDef="let iotDevice">{{ iotDevice.connections?.length ?? 0 }}</td>
     </ng-container>
@@ -118,7 +166,10 @@
     <!-- Active Column -->
     <ng-container matColumnDef="active">
       <th mat-header-cell *matHeaderCellDef mat-sort-header="active">
-        {{ "IOT-TABLE.ACTIVE" | translate }}
+        <div [ngClass]="this.sort.active === 'active' ? 'column-title-color' : 'column-title-color-inactive'">
+          {{ "IOT-TABLE.ACTIVE" | translate }}
+        </div>
+        <app-table-sort-icon [sortDirection]="getSortDirection('active')" />
       </th>
       <td mat-cell *matCellDef="let iotDevice">{{ lastActive(iotDevice) }}</td>
     </ng-container>
@@ -142,7 +193,7 @@
                 >{{ "IOTDEVICE-TABLE-ROW.EDIT" | translate }}
               </a>
             </li>
-            <li class="dropdown-item" *ngIf="iotDevice.type!==deviceTypes.SIGFOX">
+            <li class="dropdown-item" *ngIf="iotDevice.type !== deviceTypes.SIGFOX">
               <a (click)="onOpenChangeApplicationDialog(iotDevice.id)" routerLinkActive="active">{{
                 "IOTDEVICE.CHANGE-APPLICATION.TITLE" | translate
               }}</a>
