--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,13 @@
 @import "src/assets/scss/setup/variables";
 
 #content {
+  transition: margin-left 0.3s ease;
+
   @media (min-width: $screen-md-min) {
-    padding-left: $navWidth;
+    padding-left: 0;
+
+    &.nav-visible {
+      padding-left: $navWidth;
+    }
   }
 }
