--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -391,5 +391,5 @@ $warning-color: #fde047;
 $default-color: #525252;
 $default-neutral-color: #d4d4d4;
 $default-icon-color: #404040;
-
+$color-neutral-200: #e5e5e5;
 $selector-font-color: #737373;
