--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,11 +2,9 @@
 @import "src/assets/scss/setup/variables";
 
 #content {
-  transition: margin-left 0.3s ease;
-
   @media (min-width: $screen-md-min) {
     padding-left: 0;
-
+    transition: padding-left 0.3s ease-in-out;
     &.nav-visible {
       padding-left: $navWidth;
     }
